--- a/back/package.json
+++ b/back/package.json
@@ -12,6 +12,7 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.0.1",
     "express-validator": "^7.0.1",
     "helmet": "^7.0.0",
